vertica align bug fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,7 @@
     width:33.3%;
     height: 80px;
     background-color: black;
+    vertical-align: middle;
 }
 
 .home-phone-details {
